Updated another 2 items and tested inventory panel for 8 items total.

--- a/index.html
+++ b/index.html
@@ -273,6 +273,62 @@
                             </div>
                         </div>
 <!-- End of card 6 -->
+<!-- Start of card 7 -->
+                        <div class="card">
+                            <div class="card-header">
+                                <h2 class="mb-0 d-flex justify-content-between">
+                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#ayogado">Ayogado
+                                    </button>
+                                    <div class="input-group">
+                                        <input type="number" class="form-control" placeholder="Price">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">$</span>
+                                        </div>
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-secondary" type="button">Sell</button>
+                                        </div>
+                                    </div>
+                                </h2>
+                            </div>
+
+                            <div id="ayogado" class="collapse" data-parent="#inventory">
+                                <div class="card-body">
+                                    <ul>
+                                        <li>Bought on Day 2</li>
+                                        <li>Bought for 300$</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+<!-- End of card 7 -->
+<!-- Start of card 8 -->
+                        <div class="card">
+                            <div class="card-header">
+                                <h2 class="mb-0 d-flex justify-content-between">
+                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#goggles">Goggles
+                                    </button>
+                                    <div class="input-group">
+                                        <input type="number" class="form-control" placeholder="Price">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">$</span>
+                                        </div>
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-secondary" type="button">Sell</button>
+                                        </div>
+                                    </div>
+                                </h2>
+                            </div>
+
+                            <div id="goggles" class="collapse" data-parent="#inventory">
+                                <div class="card-body">
+                                    <ul>
+                                        <li>Bought on Day 2</li>
+                                        <li>Bought for 300$</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+<!-- End of card 8 -->
                     </div>
                 </div>
 <!-- Inventory panel ends -->
