--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 <!-- Buying item 1 -->
                         <div class="card" style="width: 9rem; visibility: hidden;" id="buy1">
                             <div class="card-header text-center">
-                                <h6 class="card-title capitalize" id="item1name">Goose</h6>
+                                <h6 class="card-title capitalize" id="item1name"></h6>
                             </div>
-                            <img src="img/goose.jpg" class="card-img-top" id="item1img">
+                            <img src="" class="card-img-top" id="item1img">
                             <div class="card-body">
                                 <div class="card-text d-flex justify-content-between align-items-center">
                                     <div>
-                                        <span id="item1price">300</span>
+                                        <span id="item1price"></span>
                                         <span>$</span>
                                     </div>
-                                    <button class="btn btn-danger btn-sm">Buy</button>
+                                    <button value="" class="btn btn-danger btn-sm" id="item1buy">Buy</button>
                                 </div>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                     <div class="row card-deck">
 
 
-                        <div class="card" style="width: 9rem;">
+                        <div class="card" style="width: 9rem; visibility: hidden;">
                             <div class="card-header text-center">
                                 <h6 class="card-title capitalize">Hazelnut</h6>
                             </div>
@@ -77,7 +77,7 @@
                             </div>
                         </div>
 
-                        <div class="card" style="width: 9rem;">
+                        <div class="card" style="width: 9rem; visibility: hidden;">
                             <div class="card-header text-center">
                                 <h6 class="card-title capitalize">Mountain</h6>
                             </div>
@@ -88,7 +88,7 @@
                             </div>
                         </div>
 
-                        <div class="card" style="width: 9rem;">
+                        <div class="card" style="width: 9rem; visibility: hidden;">
                             <div class="card-header text-center">
                                 <h6 class="card-title capitalize">Tap</h6>
                             </div>
@@ -111,10 +111,10 @@
                     <h3 class="bg-warning text-dark rounded text-center">Inventory</h3>
                     <div class="accordion" id="inventory">
 <!-- Start of card 1 -->
-                        <div class="card">
+                        <div class="card" style="visibility: hidden;" id="inventory1Visibility">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#trap">Trap
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory1target" id="inventory1">
                                     </button>
                                     <div class="input-group">
                                         <input type="number" class="form-control" placeholder="Price">
@@ -128,18 +128,18 @@
                                 </h2>
                             </div>
 
-                            <div id="trap" class="collapse" data-parent="#inventory">
+                            <div id="inventory1target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day 2</li>
-                                        <li>Bought for 300$</li>
+                                        <li>Bought on Day <span id="dateBought1"></span></li>
+                                        <li>Bought for <span id="buyingPrice1"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 1 -->
 <!-- Start of card 2 -->
-                        <div class="card">
+                        <div class="card" style="display: none;">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
                                     <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#gun">Gun
@@ -159,15 +159,15 @@
                             <div id="gun" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day 2</li>
-                                        <li>Bought for 300$</li>
+                                        <li>Bought on Day <span id="dateBought2"></span></li>
+                                        <li>Bought for <span id="buyingPrice2"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 2 -->
 <!-- Start of card 3 -->
-                        <div class="card">
+                        <div class="card" style="display: none;">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
                                     <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#goose">Goose
@@ -187,15 +187,15 @@
                             <div id="goose" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day 2</li>
-                                        <li>Bought for 300$</li>
+                                        <li>Bought on Day <span id="dateBought3"></span></li>
+                                        <li>Bought for <span id="buyingPrice3"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 3 -->
 <!-- Start of card 4 -->
-                        <div class="card">
+                        <div class="card" style="display: none;">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
                                     <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#walnut">Walnut
@@ -215,15 +215,15 @@
                             <div id="walnut" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day 2</li>
-                                        <li>Bought for 300$</li>
+                                        <li>Bought on Day <span id="dateBought4"></span></li>
+                                        <li>Bought for <span id="buyingPrice4"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 4 -->
 <!-- Start of card 5 -->
-                        <div class="card">
+                        <div class="card" style="display: none;">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
                                     <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#mountain">Mountain
@@ -243,15 +243,15 @@
                             <div id="mountain" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day 2</li>
-                                        <li>Bought for 300$</li>
+                                        <li>Bought on Day <span id="dateBought5"></span></li>
+                                        <li>Bought for <span id="buyingPrice5"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 5 -->
 <!-- Start of card 6 -->
-                        <div class="card">
+                        <div class="card" style="display: none;">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
                                     <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#tap">Tap
@@ -271,15 +271,15 @@
                             <div id="tap" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day 2</li>
-                                        <li>Bought for 300$</li>
+                                        <li>Bought on Day <span id="dateBought6"></span></li>
+                                        <li>Bought for <span id="buyingPrice6"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 6 -->
 <!-- Start of card 7 -->
-                        <div class="card">
+                        <div class="card" style="display: none;">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
                                     <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#ayogado">Ayogado
@@ -299,15 +299,15 @@
                             <div id="ayogado" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day 2</li>
-                                        <li>Bought for 300$</li>
+                                        <li>Bought on Day <span id="dateBought7"></span></li>
+                                        <li>Bought for <span id="buyingPrice7"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 7 -->
 <!-- Start of card 8 -->
-                        <div class="card">
+                        <div class="card" style="display: none;">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
                                     <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#goggles">Goggles
@@ -327,8 +327,8 @@
                             <div id="goggles" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day 2</li>
-                                        <li>Bought for 300$</li>
+                                        <li>Bought on Day <span id="dateBought8"></span></li>
+                                        <li>Bought for <span id="buyingPrice8"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
