--- a/index.html
+++ b/index.html
@@ -17,42 +17,52 @@
                 <div class="jumbotron">
                     <div class="row card-deck">
 <!-- Buying item 1 -->
-                        <div class="card" style="width: 9rem; visibility: hidden;" id="buy1">
+                        <div class="card" style="width: 9rem; visibility: hidden;" id="b1">
                             <div class="card-header text-center">
-                                <h6 class="card-title capitalize" id="item1name"></h6>
+                                <h6 class="card-title capitalize" id="b1Name">Hidden</h6>
                             </div>
-                            <img src="" class="card-img-top" id="item1img">
+                            <img src="img/placeholder.png" class="card-img-top" id="b1Img">
                             <div class="card-body">
                                 <div class="card-text d-flex justify-content-between align-items-center">
                                     <div>
-                                        <span id="item1price"></span>
+                                        <span id="b1Price"></span>
                                         <span>$</span>
                                     </div>
-                                    <button value="" class="btn btn-danger btn-sm" id="item1buy">Buy</button>
+                                    <button value="" class="btn btn-danger btn-sm" id="b1Btn">Buy</button>
                                 </div>
                             </div>
                         </div>
 <!-- End buying item 1 -->
 <!-- Buying item 2 -->
-                        <div class="card" style="width: 9rem; visibility: hidden;" id="buy2">
+                        <div class="card" style="width: 9rem; visibility: hidden;" id="b2">
                             <div class="card-header text-center">
-                                <h6 class="card-title capitalize" id="item2name">Gun</h6>
+                                <h6 class="card-title capitalize" id="b2Name"></h6>
                             </div>
-                            <img src="img/gun.jpg" class="card-img-top">
+                            <img src="img/placeholder.png" class="card-img-top" id="b2Img">
                             <div class="card-body">
-                                <div class="card-text d-flex justify-content-between">1300 $ <button class="btn btn-danger btn-sm">Buy</button>
+                                <div class="card-text d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <span id="b2Price"></span>
+                                        <span>$</span>
+                                    </div>
+                                    <button value="" class="btn btn-danger btn-sm" id="b2Btn">Buy</button>
                                 </div>
                             </div>
                         </div>
 <!-- End buying item 2 -->
 <!-- Buying item 3 -->
-                        <div class="card" style="width: 9rem; visibility: hidden;" id="buy3">
+                        <div class="card" style="width: 9rem; visibility: hidden;" id="b3">
                             <div class="card-header text-center">
-                                <h6 class="card-title capitalize" id="item3name">Trap</h6>
+                                <h6 class="card-title capitalize" id="b3Name"></h6>
                             </div>
-                            <img src="img/trap.png" class="card-img-top">
+                            <img src="img/placeholder.png" class="card-img-top" id="b3Img">
                             <div class="card-body">
-                                <div class="card-text d-flex justify-content-between">300 $ <button class="btn btn-danger btn-sm">Buy</button>
+                                <div class="card-text d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <span id="b3Price"></span>
+                                        <span>$</span>
+                                    </div>
+                                    <button value="" class="btn btn-danger btn-sm" id="b3Btn">Buy</button>
                                 </div>
                             </div>
                         </div>
@@ -64,41 +74,54 @@
                 <h3 class="bg-warning text-dark rounded text-center">Your Shop</h3>
                 <div class="jumbotron">
                     <div class="row card-deck">
-
-
-                        <div class="card" style="width: 9rem; visibility: hidden;">
+<!-- Selling item 1 -->
+                        <div id="s1" class="card" style="width: 9rem; visibility: hidden;">
                             <div class="card-header text-center">
-                                <h6 class="card-title capitalize">Hazelnut</h6>
+                                <h6 class="card-title capitalize" id="s1Name">Hidden</h6>
                             </div>
-                            <img src="img/hazelnut.jpg" class="card-img-top">
+                            <img id="s1Img" src="img/placeholder.png" class="card-img-top">
                             <div class="card-body">
-                                <div class="card-text d-flex justify-content-between">50 $ <button class="btn btn-danger btn-sm">Buy</button>
+                                <div class="card-text d-flex justify-content-between">
+                                    <div>
+                                        <span id="s1Price"></span><span>$</span>
+                                    </div>
+                                    <button id="s1Btn" class="btn btn-danger btn-sm">Remove</button>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="card" style="width: 9rem; visibility: hidden;">
+<!-- End selling item 1 -->
+<!-- Selling item 2 -->
+                        <div id="s2" class="card" style="width: 9rem; visibility: hidden;">
                             <div class="card-header text-center">
-                                <h6 class="card-title capitalize">Mountain</h6>
+                                <h6 class="card-title capitalize" id="s2Name"></h6>
                             </div>
-                            <img src="img/mountain.jpg" class="card-img-top">
+                            <img id="s2Img" src="" class="card-img-top">
                             <div class="card-body">
-                                <div class="card-text d-flex justify-content-between">1300 $ <button class="btn btn-danger btn-sm">Buy</button>
+                                <div class="card-text d-flex justify-content-between">
+                                    <div>
+                                        <span id="s2Price"></span><span>$</span>
+                                    </div>
+                                    <button id="s2Btn" class="btn btn-danger btn-sm">Remove</button>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="card" style="width: 9rem; visibility: hidden;">
+<!-- End selling item 2 -->
+<!-- Selling item 3 -->
+                        <div id="s3" class="card" style="width: 9rem; visibility: hidden;">
                             <div class="card-header text-center">
-                                <h6 class="card-title capitalize">Tap</h6>
+                                <h6 class="card-title capitalize" id="s3Name"></h6>
                             </div>
-                            <img src="img/tap.jpg" class="card-img-top">
+                            <img id="s3Img" src="" class="card-img-top">
                             <div class="card-body">
-                                <div class="card-text d-flex justify-content-between">300 $ <button class="btn btn-danger btn-sm">Buy</button>
+                                <div class="card-text d-flex justify-content-between">
+                                    <div>
+                                        <span id="s3Price"></span><span>$</span>
+                                    </div>
+                                    <button id="s3Btn" class="btn btn-danger btn-sm">Remove</button>
                                 </div>
                             </div>
                         </div>
-
+<!-- End selling item 3 -->
                     </div>
                 </div>
 <!-- Area where the selling stops -->
@@ -111,28 +134,28 @@
                     <h3 class="bg-warning text-dark rounded text-center">Inventory</h3>
                     <div class="accordion" id="inventory">
 <!-- Start of card 1 -->
-                        <div class="card" style="display: none;" id="inventory1Display">
+                        <div class="card" style="display: none;" id="i1">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory1target" id="inventory1">
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i1Target" id="i1Name">
                                     </button>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Price" id="item1sellPrice">
+                                        <input type="number" class="form-control" placeholder="Price" id="i1SP">
                                         <div class="input-group-append">
                                             <span class="input-group-text">$</span>
                                         </div>
                                         <div class="input-group-append">
-                                            <button id="item1sell" class="btn btn-outline-secondary" type="button">Sell</button>
+                                            <button id="i1Btn" class="btn btn-outline-secondary" type="button">Sell</button>
                                         </div>
                                     </div>
                                 </h2>
                             </div>
 
-                            <div id="inventory1target" class="collapse" data-parent="#inventory">
+                            <div id="i1Target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day <span id="dateBought1"></span></li>
-                                        <li>Bought for <span id="buyingPrice1"></span>$</li>
+                                        <li>Bought on Day <span id="i1Date"></span></li>
+                                        <li>Bought for <span id="i1BP"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
